# cap-protocol

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_REVIEW.md  CONTRIBUTING.md  Cargo.toml  LICENSE-CC-BY-4.0  LICENSE-MIT  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
crates/cap-cli/: Cargo.toml  README.md
crates/cap-cli/src/: main.rs
crates/cap-rs/: Cargo.toml  README.md  build.rs
crates/cap-rs-a2a/: Cargo.toml  README.md
crates/cap-rs-acp/: Cargo.toml  README.md
crates/cap-rs-core/: Cargo.toml  README.md
crates/cap-rs-grpc/: Cargo.toml  README.md
crates/cap-rs-orchestrator/: Cargo.toml  README.md
crates/cap-rs-orchestrator/examples/: claude_smoke.rs
crates/cap-rs-orchestrator/src/: audit.rs  config.rs  event.rs  executor.rs  factory.rs  lib.rs  real_factory.rs  registry.rs  routing.rs  session.rs  testing.rs  worktree.rs
crates/cap-rs-orchestrator/tests/: patterns.rs
crates/cap-rs-pty/: Cargo.toml  README.md
crates/cap-rs-stream-json/: Cargo.toml  README.md
crates/cap-rs/examples/: claude_chat.rs  claude_hello.rs  codex_chat.rs  codex_hello.rs  codex_smoke.rs  codex_tui_smoke.rs  grpc_hello.rs  pty_hello.rs  repl_hello.rs
crates/cap-rs/src/: core.rs  driver.rs  lib.rs  manifest.rs  wire.rs
crates/cap-rs/src/driver/: a2a.rs  acp.rs  codex.rs  codex_app_server.rs  codex_mcp.rs  grpc.rs  pty.rs  stream_json.rs
docs/: STATUS.md  cap-orchestrator-engine-design.md  cap-orchestrator-engine-plan.md  cap-profile-coding-v1.md  cap-v1.md  quickstart.md
docs/examples/: 4-agents.yaml  by-subtask.yaml  fanout-join.yaml  parallel-collect.yaml  pipeline.yaml
docs/superpowers/plans/: 2026-05-26-cap-core-v1-conformance.md
docs/superpowers/specs/: 2026-05-26-cap-core-v1-conformance-design.md
examples/: aider.toml  claude-code.toml  codex.toml  openclaude.toml  opencode.toml
website/: README.md  index.html  style.css
