[workspace]
resolver = "3"
members = [
    "crates/cap-rs",
    "crates/cap-cli",
]

# ---------------------------------------------------------------------------
# Reserved sub-crate names (locked at v0.0.0 on crates.io, NOT in this
# workspace and NOT actively maintained):
#
#   cap-rs-core            cap-rs-pty            cap-rs-stream-json
#   cap-rs-acp             cap-rs-a2a            cap-rs-grpc
#   cap-rs-orchestrator
#
# Everything currently lives inside `cap-rs` behind feature flags. These
# names are defensive reservations. If a binding ever genuinely benefits
# from independent semver (e.g. `cap-rs-grpc` if tonic/prost build cost
# becomes a sticking point, or a third party offers to co-maintain a
# binding), the name is already ours and we can split it out without
# squatter friction.
# ---------------------------------------------------------------------------

[workspace.package]
version      = "0.0.0"
edition      = "2024"
rust-version = "1.85"
authors      = ["rsclaw <team@rsclaw.ai>"]
homepage     = "https://cap-protocol.org"
repository   = "https://github.com/rsclaw-ai/cap-protocol"
license      = "MIT"
keywords     = ["cap", "agent", "protocol", "cli"]
categories   = ["development-tools", "command-line-utilities"]

[profile.release]
lto           = "thin"
codegen-units = 1
strip         = "symbols"
