[package]
name        = "cap-cli"
description = "cap command-line tool — discover, drive, and orchestrate CLI AI agents."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
homepage.workspace     = true
repository.workspace   = true
license.workspace      = true
keywords.workspace     = true
categories.workspace   = true
readme = "README.md"

[dependencies]
cap-rs-orchestrator = { path = "../cap-rs-orchestrator" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util", "signal"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }

[[bin]]
name = "cap"
path = "src/main.rs"
