[package]
name        = "cap-rs-a2a"
description = "A2A HTTPS+SSE binding for the CAP (CLI Agent Protocol). Bidirectional A2A interop."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
homepage.workspace     = true
repository.workspace   = true
license.workspace      = true
keywords.workspace     = true
categories.workspace   = true
readme = "README.md"

[lib]
path = "src/lib.rs"
