[package]
name        = "cap-rs-acp"
description = "ACP-stdio fast-path driver for the CAP (CLI Agent Protocol). Bridges Zed-style agents."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
homepage.workspace     = true
repository.workspace   = true
license.workspace      = true
keywords.workspace     = true
categories.workspace   = true
readme = "README.md"

[lib]
path = "src/lib.rs"
