[package]
name        = "cap-rs-core"
description = "Core protocol types and Manifest parser for the CAP (CLI Agent Protocol)."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
homepage.workspace     = true
repository.workspace   = true
license.workspace      = true
keywords.workspace     = true
categories.workspace   = true
readme = "README.md"

[lib]
path = "src/lib.rs"
