[package]
name        = "cap-rs-pty"
description = "PTY-based universal driver for the CAP (CLI Agent Protocol). Drive any CLI AI agent."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
homepage.workspace     = true
repository.workspace   = true
license.workspace      = true
keywords.workspace     = true
categories.workspace   = true
readme = "README.md"

[lib]
path = "src/lib.rs"
