[package]
name        = "cap-rs"
description = "Rust reference implementation of the CAP (CLI Agent Protocol)."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
homepage.workspace     = true
repository.workspace   = true
license.workspace      = true
keywords.workspace     = true
categories.workspace   = true
readme = "README.md"

[lib]
path = "src/lib.rs"

# ---------------------------------------------------------------------------
# Features
#
# `pty` is in `default` because it is the universal substrate of CAP.
# Other bindings are opt-in fast-paths for agents that natively support
# them. Heavy native deps (tonic, git2, portable-pty, reqwest TLS) are
# scoped to their feature with `optional = true` — disabling a feature
# removes both code and deps from the dependency graph.
# ---------------------------------------------------------------------------

[features]
default      = ["pty"]

pty          = []
stream-json  = ["dep:serde", "dep:serde_json", "dep:tokio", "dep:tokio-util", "dep:async-trait", "dep:thiserror", "dep:tracing", "dep:futures"]
acp          = []
a2a          = []
grpc         = []
orchestrator = []

full         = ["pty", "stream-json", "acp", "a2a", "grpc", "orchestrator"]

[dependencies]
serde       = { version = "1", features = ["derive"], optional = true }
serde_json  = { version = "1",                          optional = true }
tokio       = { version = "1", features = ["process", "io-util", "rt", "rt-multi-thread", "macros", "sync"], optional = true }
tokio-util  = { version = "0.7", features = ["codec"],  optional = true }
async-trait = { version = "0.1",                        optional = true }
thiserror   = { version = "2",                          optional = true }
tracing     = { version = "0.1",                        optional = true }
futures     = { version = "0.3",                        optional = true }

[dev-dependencies]
anyhow = "1.0.102"
tokio       = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[example]]
name = "claude_hello"
path = "examples/claude_hello.rs"
required-features = ["stream-json"]
