[package]
name        = "cap-rs"
description = "Rust reference implementation of the CAP (CLI Agent Protocol)."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
homepage.workspace     = true
repository.workspace   = true
license.workspace      = true
keywords.workspace     = true
categories.workspace   = true
readme = "README.md"

[lib]
path = "src/lib.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# ---------------------------------------------------------------------------
# Features
#
# `pty` is in `default` because it is the universal substrate of CAP.
# Other bindings are opt-in fast-paths for agents that natively support
# them. Heavy native deps (tonic, git2, portable-pty, reqwest TLS) are
# scoped to their feature with `optional = true` — disabling a feature
# removes both code and deps from the dependency graph.
# ---------------------------------------------------------------------------

[features]
default      = ["pty"]

pty          = ["dep:portable-pty", "dep:vt100", "dep:regex-lite", "dep:tokio", "dep:async-trait", "dep:thiserror", "dep:tracing"]
stream-json  = ["dep:tokio", "dep:tokio-util", "dep:async-trait", "dep:thiserror", "dep:tracing"]
codex        = ["dep:tokio", "dep:async-trait", "dep:thiserror", "dep:tracing"]
acp          = ["dep:tokio", "dep:async-trait", "dep:thiserror", "dep:tracing"]
a2a          = []
grpc         = []
orchestrator = []

full         = ["pty", "stream-json", "codex", "acp", "a2a", "grpc", "orchestrator"]

[dependencies]
# Always-on: used by core types regardless of features.
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"

# Driver-base: pulled in by any backend feature.
tokio        = { version = "1", features = ["process", "io-util", "rt", "rt-multi-thread", "macros", "sync", "time"], optional = true }
async-trait  = { version = "0.1",                        optional = true }
thiserror    = { version = "2",                          optional = true }
tracing      = { version = "0.1",                        optional = true }

# stream-json specific.
tokio-util   = { version = "0.7", features = ["codec"],  optional = true }

# pty specific.
portable-pty = { version = "0.9",                        optional = true }
vt100        = { version = "0.16",                       optional = true }
regex-lite   = { version = "0.1",                        optional = true }

[dev-dependencies]
anyhow = "1.0.102"
tokio       = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[example]]
name = "claude_hello"
path = "examples/claude_hello.rs"
required-features = ["stream-json"]

[[example]]
name = "claude_chat"
path = "examples/claude_chat.rs"
required-features = ["stream-json"]

[[example]]
name = "pty_hello"
path = "examples/pty_hello.rs"
required-features = ["pty"]

[[example]]
name = "repl_hello"
path = "examples/repl_hello.rs"
required-features = ["pty"]

[[example]]
name = "codex_hello"
path = "examples/codex_hello.rs"
required-features = ["codex"]

[[example]]
name = "codex_chat"
path = "examples/codex_chat.rs"
required-features = ["codex"]

[[example]]
name = "codex_smoke"
path = "examples/codex_smoke.rs"
required-features = ["codex"]
