[package]
name        = "cap-rs"
description = "Rust reference implementation of the CAP (CLI Agent Protocol)."
version.workspace      = true
edition.workspace      = true
authors.workspace      = true
homepage.workspace     = true
repository.workspace   = true
license.workspace      = true
keywords.workspace     = true
categories.workspace   = true
readme = "README.md"

[lib]
path = "src/lib.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# ---------------------------------------------------------------------------
# Features
#
# `pty` is in `default` because it is the universal substrate of CAP.
# Other bindings are opt-in fast-paths for agents that natively support
# them. Heavy native deps (tonic, git2, portable-pty, reqwest TLS) are
# scoped to their feature with `optional = true` — disabling a feature
# removes both code and deps from the dependency graph.
# ---------------------------------------------------------------------------

[features]
default      = ["pty"]

pty          = ["dep:portable-pty", "dep:vt100", "dep:regex-lite", "dep:tokio", "dep:async-trait", "dep:thiserror", "dep:tracing", "dep:libc"]
stream-json  = ["dep:tokio", "dep:tokio-util", "dep:async-trait", "dep:thiserror", "dep:tracing"]
codex        = ["dep:tokio", "dep:async-trait", "dep:thiserror", "dep:tracing"]
acp          = ["dep:tokio", "dep:async-trait", "dep:thiserror", "dep:tracing"]
a2a          = ["dep:tokio", "dep:async-trait", "dep:thiserror", "dep:tracing", "dep:reqwest", "dep:futures-util"]
grpc         = ["dep:tokio", "dep:tokio-stream", "dep:async-trait", "dep:thiserror", "dep:tracing", "dep:tonic", "dep:prost", "dep:tonic-build"]
orchestrator = []
testing      = []

full         = ["pty", "stream-json", "codex", "acp", "a2a", "grpc", "orchestrator"]

[dependencies]
# Always-on: used by core types regardless of features.
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
toml         = "0.8"

# Driver-base: pulled in by any backend feature.
tokio        = { version = "1", features = ["process", "io-util", "rt", "rt-multi-thread", "macros", "sync", "time"], optional = true }
async-trait  = { version = "0.1",                        optional = true }
thiserror    = { version = "2",                          optional = true }
tracing      = { version = "0.1",                        optional = true }
futures-util = { version = "0.3", optional = true }
reqwest      = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"], optional = true }

# stream-json specific.
tokio-util   = { version = "0.7", features = ["codec"],  optional = true }

# gRPC streaming.
tokio-stream = { version = "0.1", features = ["sync"],    optional = true }

# pty specific.
portable-pty = { version = "0.9",                        optional = true }
vt100        = { version = "0.16",                       optional = true }
regex-lite   = { version = "0.1",                        optional = true }
libc         = { version = "0.2",                        optional = true }

# gRPC specific.
tonic        = { version = "0.14",                       optional = true }
prost        = { version = "0.13",                       optional = true }

[build-dependencies]
tonic-build = { version = "0.12", optional = true }

[dev-dependencies]
anyhow = "1.0.102"
tokio       = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[example]]
name = "claude_hello"
path = "examples/claude_hello.rs"
required-features = ["stream-json"]

[[example]]
name = "claude_chat"
path = "examples/claude_chat.rs"
required-features = ["stream-json"]

[[example]]
name = "pty_hello"
path = "examples/pty_hello.rs"
required-features = ["pty"]

[[example]]
name = "repl_hello"
path = "examples/repl_hello.rs"
required-features = ["pty"]

[[example]]
name = "codex_hello"
path = "examples/codex_hello.rs"
required-features = ["codex"]

[[example]]
name = "codex_chat"
path = "examples/codex_chat.rs"
required-features = ["codex"]

[[example]]
name = "codex_smoke"
path = "examples/codex_smoke.rs"
required-features = ["codex"]

[[example]]
name = "grpc_hello"
path = "examples/grpc_hello.rs"
required-features = ["grpc"]
